--- a/RunRepsTracker/app/src/main/res/layout/activity_main.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,17 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.matej.runrepstracker.MainActivity">
+   >
 
-    <TextView
-        android:id="@+id/AppTitleTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="RunAndRepsTracker"
-        android:textAlignment="center"
-        android:textSize="@dimen/size_of_app_title"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        />
     <Button
         android:id="@+id/PushUpBtn"
         android:layout_width="match_parent"
@@ -45,4 +36,16 @@
         android:text="RunButton"
         android:textAlignment="center"
         />
+
+    <TextView
+        android:id="@+id/AppTitleTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="RunAndRepsTracker"
+        android:textAlignment="center"
+        android:textSize="@dimen/size_of_app_title"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
