--- a/RunRepsTracker/app/src/main/res/layout/activity_sit_up.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_sit_up.xml
@@ -10,6 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.matej.runrepstracker.SitUpActivity">
     <TextView
+        android:id="@+id/SitUpTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="This is SitUpActivity"
