--- a/RunRepsTracker/app/src/main/res/layout/activity_push_up.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_push_up.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_push_up"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.matej.runrepstracker.PushUpActivity">
+    >
     <TextView
         android:id="@+id/PushUpTv"
         android:layout_width="match_parent"
@@ -16,6 +16,25 @@
         android:text="This is PushUpActivity"
         android:textAlignment="center"
         android:textSize="@dimen/size_of_app_title"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        />
+    <TextView
+        android:id="@+id/PushUpCountTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/PushUpTv"
+        android:textAlignment="center"
+        android:text="0"
+        android:textSize="@dimen/size_of_counter"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         />
 
+    <Button
+        android:id="@+id/ResetBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/PushUpCountTv"
+        android:text="RESET"
+        android:textAlignment="center"
+        />
 </RelativeLayout>
