--- a/RunRepsTracker/app/src/main/res/layout/activity_push_up.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_push_up.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_push_up"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/appbackground"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -16,7 +17,8 @@
         android:text="This is PushUpActivity"
         android:textAlignment="center"
         android:textSize="@dimen/size_of_app_title"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:textColor="@color/apptextcolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
         />
     <TextView
         android:id="@+id/PushUpCountTv"
@@ -26,7 +28,9 @@
         android:textAlignment="center"
         android:text="0"
         android:textSize="@dimen/size_of_counter"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:textColor="@color/btntextcolor"
+        android:background="@color/countercolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
         />
 
     <Button
@@ -36,5 +40,19 @@
         android:layout_below="@+id/PushUpCountTv"
         android:text="RESET"
         android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        />
+    <Button
+        android:id="@+id/SaveBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ResetBtn"
+        android:text="SAVE"
+        android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
         />
 </RelativeLayout>
