--- a/RunRepsTracker/app/src/main/res/layout/activity_sit_up.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_sit_up.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_sit_up"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/appbackground"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,8 +16,9 @@
         android:layout_height="wrap_content"
         android:text="This is SitUpActivity"
         android:textAlignment="center"
+        android:textColor="@color/apptextcolor"
         android:textSize="@dimen/size_of_app_title"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:layout_margin="@dimen/activity_vertical_margin"
         />
 
     <TextView
@@ -26,8 +28,10 @@
         android:layout_below="@+id/SitUpTv"
         android:textAlignment="center"
         android:text="0"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
         android:textSize="@dimen/size_of_counter"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:layout_margin="@dimen/activity_vertical_margin"
         />
 
     <Button
@@ -37,15 +41,29 @@
         android:layout_below="@+id/SitUpCountTv"
         android:text="RESET"
         android:textAlignment="center"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        />
+    <Button
+        android:id="@+id/SaveBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ResetBtn"
+        android:text="SAVE"
+        android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
         />
     <TextView
         android:id="@+id/textx"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ResetBtn"
+        android:layout_below="@+id/SaveBtn"
         android:textAlignment="center"
         android:text="0"
+        android:textColor="@color/btntextcolor"
         android:textSize="15sp"
         android:paddingBottom="@dimen/activity_vertical_margin"
         />
@@ -56,6 +74,7 @@
         android:layout_below="@+id/textx"
         android:textAlignment="center"
         android:text="0"
+        android:textColor="@color/btntextcolor"
         android:textSize="15sp"
         android:paddingBottom="@dimen/activity_vertical_margin"
         />
@@ -66,6 +85,7 @@
         android:layout_below="@+id/texty"
         android:textAlignment="center"
         android:text="0"
+        android:textColor="@color/btntextcolor"
         android:textSize="15sp"
         android:paddingBottom="@dimen/activity_vertical_margin"
         />
