--- a/RunRepsTracker/app/src/main/res/values/colors.xml
+++ b/RunRepsTracker/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="appbackground">#050f21</color>
+    <color name="countercolor">#F56106</color>
+    <color name="apptextcolor">#F56106</color>
+    <color name="btntextcolor">#FFFFFF</color>
 </resources>
