--- a/RunRepsTracker/app/src/main/res/layout/activity_result_history.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_result_history.xml
@@ -1,24 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_push_up"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/appbackground"
     >
-    <TextView
-        android:id="@+id/ResultHistoryTv"
+    <Button
+        android:id="@+id/PushUpHistoryBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is ResultHistoryActivity"
+        android:text="PUSHUP HISTORY"
         android:textAlignment="center"
-        android:textSize="@dimen/size_of_app_title"
-        android:textColor="@color/apptextcolor"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        />
+    <Button
+        android:id="@+id/SitUpHistoryBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/PushUpHistoryBtn"
+        android:text="SITUP HISTORY"
+        android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        />
+    <Button
+        android:id="@+id/RunHistoryBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/SitUpHistoryBtn"
+        android:text="RUN HISTORY"
+        android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_margin="@dimen/activity_vertical_margin"
         />
 
-</RelativeLayout>
+</LinearLayout>
