--- a/RunRepsTracker/app/src/main/res/layout/activity_run.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_run.xml
@@ -1,8 +1,97 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.matej.runrepstracker.RunActivity" />
+    android:orientation="vertical"
+    android:background="@color/appbackground"
+    >
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        tools:context="com.example.matej.runrepstracker.RunActivity">
+    </fragment>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/appbackground"
+        android:weightSum="1">
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/btntextcolor"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_weight="0.50"
+            />
+        <TextView
+            android:id="@+id/distanceTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DISTANCE"
+            android:textAlignment="center"
+            android:textColor="@color/btntextcolor"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_weight="0.50"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/appbackground"
+        android:weightSum="1"
+        >
+
+    <Button
+        android:id="@+id/StartBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="START"
+        android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_weight="0.25"
+        />
+    <Button
+        android:id="@+id/StopBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="STOP"
+        android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_weight="0.25"
+        />
+    <Button
+        android:id="@+id/ResetBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RESET"
+        android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_weight="0.25"
+        />
+    <Button
+        android:id="@+id/SaveBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SAVE"
+        android:textAlignment="center"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:layout_weight="0.25"
+        />
+</LinearLayout>
+
+</LinearLayout>
