--- a/RunRepsTracker/app/src/main/res/layout/activity_main.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/appbackground"
+    >
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/appbackground"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
    >
-    <TextView
-        android:id="@+id/AppTitleTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="RunAndRepsTracker"
-        android:textAlignment="center"
-        android:textColor="@color/apptextcolor"
-        android:textSize="@dimen/size_of_app_title"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+
 <Button
     android:id="@+id/PushUpBtn"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@id/AppTitleTv"
     android:background="@color/countercolor"
     android:textColor="@color/btntextcolor"
     android:text="Push Up"
@@ -37,7 +31,6 @@
         android:id="@+id/SitUpBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/PushUpBtn"
         android:background="@color/countercolor"
         android:textColor="@color/btntextcolor"
         android:text="Sit Up"
@@ -47,7 +40,6 @@
         android:id="@+id/RunBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/SitUpBtn"
         android:background="@color/countercolor"
         android:textColor="@color/btntextcolor"
         android:text="Run"
@@ -57,11 +49,28 @@
         android:id="@+id/ResultHistoryBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/RunBtn"
         android:background="@color/countercolor"
         android:textColor="@color/btntextcolor"
         android:text="Result History"
         android:layout_margin="@dimen/activity_vertical_margin"
         />
-
-</RelativeLayout>
+    <Button
+        android:id="@+id/AboutBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/countercolor"
+        android:textColor="@color/btntextcolor"
+        android:text="About"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        />
+    <TextView
+        android:id="@+id/AppTitleTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_text"
+        android:textAlignment="center"
+        android:textColor="@color/apptextcolor"
+        android:textSize="@dimen/size_of_app_title"
+        android:paddingBottom="@dimen/activity_vertical_margin"/>
+</LinearLayout>
+</ScrollView>
