--- a/RunRepsTracker/app/src/main/res/layout/activity_result_history.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_result_history.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/appbackground"
+    >
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -42,5 +47,17 @@
         android:textColor="@color/btntextcolor"
         android:layout_margin="@dimen/activity_vertical_margin"
         />
+    <TextView
+        android:id="@+id/QuoteTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/results_quote"
+        android:textAlignment="center"
+        android:textColor="@color/apptextcolor"
+        android:textSize="@dimen/quote_size"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        />
 
 </LinearLayout>
+</ScrollView>
