--- a/RunRepsTracker/app/src/main/res/layout/activity_run.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_run.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/appbackground"
+    >
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -45,12 +50,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/appbackground"
-        android:weightSum="1"
-        >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:background="@color/appbackground"
+    android:weightSum="1"
+    >
 
     <Button
         android:id="@+id/StartBtn"
@@ -95,3 +100,4 @@
 </LinearLayout>
 
 </LinearLayout>
+    </ScrollView>
