--- a/RunRepsTracker/app/src/main/res/layout/activity_push_up.xml
+++ b/RunRepsTracker/app/src/main/res/layout/activity_push_up.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/appbackground"
+    >
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_push_up"
@@ -126,6 +131,5 @@
             />
     </LinearLayout>
 
-
-
 </LinearLayout>
+</ScrollView>
