--- a/RunRepsTracker/app/src/main/res/layout/situp_item.xml
+++ b/RunRepsTracker/app/src/main/res/layout/situp_item.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     >
     <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <TextView
         android:id="@+id/tvSitUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
